# roth

./: Cargo.toml  readme.md
example_bevy/: Cargo.toml
example_bevy/assets/scenes/: main.scn.ron
example_bevy/src/: editor_plugin.rs  main.rs
example_wgpu_app/: Cargo.toml
example_wgpu_app/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: app.rs  asset_browser.rs  console.rs  drawer.rs  inspector.rs  lib.rs  main.rs  scene_viewer.rs
