[package]
name = "roth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
dioxus = { version = "0.4.3", default-features = false, features = [
    "macro",
    "hooks",
] }
tpaint = { git = "https://github.com/dylanblokhuis/tpaint.git", branch = "taffy-tree-rewrite" }
tpaint_wgpu = { git = "https://github.com/dylanblokhuis/tpaint.git", branch = "taffy-tree-rewrite" }
wgpu = "0.18"
log = "0.4"
raw-window-handle = "0.6"
simple_logger = "4"
winit = { workspace = true }
futures-util = "0.3"
ipc-channel = { version = "0.18.0", features = ["async"] }
serde = { version = "1", features = ["derive"] }
roth_shared = { workspace = true }
bevy = { path = "../bevy", default-features = false, features = ["serialize"] }

[features]
hot-reload = ["tpaint/hot-reload"]

[workspace]
members = ["example_bevy", "shared"]

[workspace.dependencies]
roth_shared = { path = "./shared" }
winit = { version = "0.29", features = ["serde", "rwh_05"] }
