[package]
name = "example_bevy_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
ipc-channel = "0.18.0"
pollster = "0.3.0"
raw-window-handle = "0.5.0"
serde = { version = "1.0.195", features = ["derive"] }
wgpu = "0.18"
winit = "0.28"
roth = { path = ".." }
